# hmac-playground

./: Makefile  README.md  docker-compose.yaml  pyproject.toml  receiver.Dockerfile  sender.Dockerfile
common/: helper.py  schema.py  settings.py
receiver/: main.py
secure/: core.py
sender/: main.py
